--- a/index.html
+++ b/index.html
@@ -55,13 +55,8 @@
 
 <br style="clear:both">
 <hr>
-<a href="debug.html">Enable debug</a>
+<a href="https://github.com/tinixos/tinixos.github.io">Tinix on Github</a>
 &mdash;
-<a href="https://github.com/copy/v86/blob/master/Readme.md">Readme</a>
+<a href="https://github.com/copy/v86">Virtual x86 on Github</a>
 &mdash;
-<a href="https://github.com/copy/v86">Project on Github</a>
-&mdash;
-<a href="https://github.com/copy/v86#compatibility">Compatibility</a>
-&mdash;
-<a href="./screenshots/">Screenshots</a>
-
+<a href="">About</a>
