add soft keyboard

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <title>Tinix OS - Virtual x86</title>
 <script type="text/javascript" src="build/libv86.js"></script>
+<script type="text/javascript" src="kbd/keyboard.js"></script>
 <script type="text/javascript" src="worker.js"></script>
 
 
@@ -55,6 +56,9 @@
     BPP: <span id="info_bpp">-</span><br>
     <!-- Keyboard: <span id="info_keyboard_enabled">-</span><br> -->
 </div>
+
+<br style="clear:both">
+<td width="50%" class="cn90" nowrap><a onclick="showkeyboard()" style={cursor:hand;}><font color="#00CC00">Use Soft Keyboard</font></a></td>
 
 <br style="clear:both">
 <hr>
