--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 
 <body> 
 <div id="runtime_options">
+    <select name="image" size="1" id="image_path">
+        <option value="images/tinix.img">Tinix OS</option>
+        <option value="images/windows101.img">Windows 1.01</option>
+        <option value="images/linux.iso">Linux</option>
+        <option value="images/tinix3.iso">Linux 3</option>
+        <option value="images/freedos722.img">Freedos 7.22</option>
+        <option value="images/kolibri.img">Kolibri</option>
+        <option value="images/openbsd.img">OpenBSD</option>
+        <option value="images/os8.dsk">OS8</option>
+    </select>
     <input type="button" value="Pause" id="run">
     <input type="button" value="Reset" id="reset">
     <input type="button" value="Ctrl-Alt-Del" id="ctrlaltdel">
