fix process div

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <hr>
-<div id="process" name="process" style="display:block" align="center">
+<div id="process" name="process" style="display:none" align="center">
     Loading:  <span id="image_name">-</span> <br>
     Size(bytes):  <span id="image_size">-</span><br>
     Process:  <span id="load_process">-</span>
