--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <option value="images/tinix.img">Tinix OS</option>
         <option value="images/windows101.img">Windows 1.01</option>
         <option value="images/linux.iso">Linux</option>
-        <option value="images/tinix3.iso">Linux 3</option>
+        <option value="images/linux3.iso">Linux 3</option>
         <option value="images/freedos722.img">Freedos 7.22</option>
         <option value="images/kolibri.img">Kolibri</option>
         <option value="images/openbsd.img">OpenBSD</option>
