--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <option value="images/freedos722.img">Freedos 7.22 (0.7MB)</option>
                     <option value="images/kolibri.img">KolibriOS (1.4MB)</option>
                     <option value="images/openbsd.img">OpenBSD (1.4MB)</option>
-                    <option value="images/os8.dsk">Solar OS (1.4MB)</option>
+                    <option value="images/os8.img">Solar OS (1.4MB)</option>
                     <option value="images/tccboot.iso">TCCBOOT Linux (6.2MB)</option>
                 </select>
             </td>
