fix button color

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <div id="runtime_options">
     <table style="margin: 0 auto;">
         <tr>
-            <td><button type="button" id="run" style="border-width: 2px"><img id="img_run" src="res/pause.png" width="50" height="50" alt="Run"></button></td>
-            <td><button type="button" id="reset" style="border-width: 2px"><img src="res/reset.png" width="50" height="50" alt="reset"></button></td>
-            <td><button type="button" id="exit" style="border-width: 2px"><img src="res/exit.png" width="50" height="50" alt="exit"></button></td>
-            <td><button type="button" id="mouse" style="border-width: 2px"><img src="res/mouse.png" width="50" height="50" alt="mouse"></button></td>
-            <td><button type="button" id="keyboard" style="border-width: 2px"><img src="res/keyboard.png" width="50" height="50" alt="keyboard"></button></td>
-            <td><button type="button" id="takesnap" style="border-width: 2px"><img src="res/takesnap.png" width="50" height="50" alt="takesnap"></button></td>
-            <td><button type="button" id="setting" style="border-width: 2px"><img src="res/setting.png" width="50" height="50" alt="setting"></button></td>
+            <td><button type="button" id="run" style="border-width: 2px"><img id="img_run" src="res/pause.png" width="50" height="50" alt="Run" style="background-color: #fff"></button></td>
+            <td><button type="button" id="reset" style="border-width: 2px"><img src="res/reset.png" width="50" height="50" alt="reset" style="background-color: #fff"></button></td>
+            <td><button type="button" id="exit" style="border-width: 2px"><img src="res/exit.png" width="50" height="50" alt="exit" style="background-color: #fff"></button></td>
+            <td><button type="button" id="mouse" style="border-width: 2px"><img src="res/mouse.png" width="50" height="50" alt="mouse" style="background-color: #fff"></button></td>
+            <td><button type="button" id="keyboard" style="border-width: 2px"><img src="res/keyboard.png" width="50" height="50" alt="keyboard" style="background-color: #fff"></button></td>
+            <td><button type="button" id="takesnap" style="border-width: 2px"><img src="res/takesnap.png" width="50" height="50" alt="takesnap" style="background-color: #fff"></button></td>
+            <td><button type="button" id="setting" style="border-width: 2px"><img src="res/setting.png" width="50" height="50" alt="setting" style="background-color: #fff"></button></td>
         </tr>
         <tr>
             <td>Pause</td><td>Reset</td><td>Exit</td><td>Mouse</td><td>Keyboard</td><td>Takesnap</td><td>Setting</td>
