update kernel url

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <hr>
 <a href="https://github.com/tinixos/tinixos.github.io">Project on Github</a>
 &mdash;
-<a href="https://github.com/tinixos/tinixos.github.io">TinixOS kernel on Github</a>
+<a href="https://github.com/tinixos/tinix">TinixOS kernel on Github</a>
 &mdash;
 <a href="https://github.com/copy/v86">Virtual x86 on Github</a>
 &mdash;
