--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 
 <br style="clear:both">
 <hr>
-<a href="https://github.com/tinixos/tinixos.github.io">Project on Github</a>
+<a href="https://github.com/tinixos/tinixos.github.io" target="_blank">Project on Github</a>
 &mdash;
-<a href="https://github.com/tinixos/tinix">TinixOS kernel on Github</a>
+<a href="https://github.com/tinixos/tinix" target="_blank">TinixOS kernel on Github</a>
 &mdash;
-<a href="https://github.com/copy/v86">Virtual x86 on Github</a>
+<a href="https://github.com/copy/v86" target="_blank">Virtual x86 on Github</a>
 &mdash;
 <a href="#">About</a>
 </body>
